# eigth_module

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  example.env  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci_cd.yml
deploy/: gunicorn.service  nginx.conf
eigth_module/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
lms/: admin.py  apps.py  models.py  paginators.py  permissions.py  serializers.py  tasks.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_initial.py  0003_coursesubscription.py  0004_add_updated_at_fields.py
lms/tests/: test_lessons.py  test_subscriptions.py
users/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: create_moderators_group.py  create_payments.py
users/migrations/: 0001_initial.py  0002_payment_stripe_fields.py
