[tool.poetry]
name = "eigth-module"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.7"
djangorestframework = "^3.15"
Pillow = "^11.0"
django-filter = "^24.0"
djangorestframework-simplejwt = "^5.3.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
drf-spectacular = "^0.27.0"
stripe = "^10.0.0"
celery = "^5.3.0"
redis = "^5.0.0"
django-celery-beat = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
